--- a/site/en/gemini-api/docs/vision.ipynb
+++ b/site/en/gemini-api/docs/vision.ipynb
@@ -252,7 +252,7 @@
         "id": "N9NxXGZKKusG",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "outputId": "cb3e9886-30dc-416a-9fd0-12e7925ecdd3"
       },
@@ -302,7 +302,7 @@
         "id": "kLFsVLFHOWSV",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "outputId": "91ce25da-7554-4be0-bfbf-f2bc3e4b36ba"
       },
@@ -368,11 +368,13 @@
         "# Choose a Gemini API model.\n",
         "model = genai.GenerativeModel(model_name=\"gemini-1.5-pro-latest\")\n",
         "\n",
-        "prompt= \"Analyze an image containing a 3x3 grid, with each cell containing a number. At the top of the image, there is a line of text that says, 'Please select all boxes with number xxx,' where 'xxx' is the target number.\n",
-        "\n",
-        "First, extract the target number from this line of text.\n",
-        "Then, identify which cells in the 3x3 grid contain this target number.\n",
-        "Return only a Python list with the positions of these cells (numbered 1 to 9, from left to right and top to bottom). The output must strictly be a Python list with the positions, nothing more, nothing less.\"\n",
+        "prompt= \"Analyze an image containing a 3x3 grid, with each cell containing a number.\\\n",
+        "         At the top of the image, there is a line of text that says, 'Please select all boxes with number xxx,' \\\n",
+        "         where 'xxx' is the target number. First, extract the target number from this line of text. \\\n",
+        "         Then, identify which cells in the 3x3 grid contain this target number. \\\n",
+        "         Return only a Python list with the positions of these cells\\\n",
+        "         (numbered 1 to 9, from left to right and top to bottom). \\\n",
+        "         The output must strictly be a Python list with the positions, nothing more, nothing less.\"\n",
         "# Prompt the model with text and the previously uploaded image.\n",
         "response = model.generate_content([sample_file, prompt])\n",
         "\n",
