--- a/examples/vision/ipynb/captcha_ocr.ipynb
+++ b/examples/vision/ipynb/captcha_ocr.ipynb
@@ -136,6 +136,7 @@
         }
       ],
       "source": [
+        "import csv\n",
         "\n",
         "# Path to the data directory\n",
         "data_dir = Path(\"./captcha/\")\n",
